--- a/src/app/agent/shared/agent-input/agent-input.component.scss
+++ b/src/app/agent/shared/agent-input/agent-input.component.scss
@@ -1,5 +1,5 @@
 .agent-input {
-  height: calc(100vh - 76px);
+  height: calc(100vh - 78px);
   padding: 4px;
   box-sizing: border-box;
   position: relative;
@@ -9,10 +9,6 @@
     .sd-input {
       margin: 0;
     }
-  }
-
-  .mmm {
-    margin-top: 20px;
   }
 
   .m-20 {
